fixed bug with scrollbar

--- a/css/art.css
+++ b/css/art.css
@@ -1,5 +1,6 @@
 header, main, footer, body {
 	padding-left: 300px;
+	overflow-y: hidden;
 }
 
 @media only screen and (max-width: 992px) {
@@ -41,7 +42,7 @@ header, main, footer, body {
 
 .shot {
 	height: 500px;
-	overflow: auto;
+	overflow-y: auto;
 }
 
 /**
